Changed MA10 to main page of Symbol Floating

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -531,6 +531,7 @@
                   <li><a class="dropdown-item" href="https://trader.bgifx.co/">Trader Work</a></li>
 
 
+
                 </ul>
               </li>
 
@@ -615,6 +616,9 @@
 
               <div class="dropdown-divider"></div>
               <li><a class="dropdown-item" href="https://support.metaquotes.net/en/users/login?returnUrl=%2Fen">Meta Support</a></li>
+              <li><a class="dropdown-item" href="https://blackwellglobal.fynxt.com/Home/">FYNXT</a></li>
+
+
               </ul>
               </li>
               </li>
