Updated PAMM URL

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -616,7 +616,7 @@
 
               <div class="dropdown-divider"></div>
               <li><a class="dropdown-item" href="https://support.metaquotes.net/en/users/login?returnUrl=%2Fen">Meta Support</a></li>
-              <li><a class="dropdown-item" href="https://blackwellglobal.fynxt.com/Home/">FYNXT</a></li>
+              <li><a class="dropdown-item" href="https://blackwellglobal.fynxt.com/Home/">PAMM</a></li>
 
 
               </ul>
