--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -12,6 +12,8 @@
 
   {% block scripts %}
 
+  {{ moment.include_moment() }}
+
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,400,400i,800,800i,900,900i|Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 
@@ -33,6 +35,54 @@
     $(function() {
       $('#main_navbar').bootnavbar();
     })
+
+
+    // $(function() {
+    //       console.log("Mouse in event handler");
+    //        $('.popup').hover(
+    //            function(event) {
+    //                // mouse in event handler
+    //                var elem = $(event.currentTarget);
+    //                console.log("Mouse in");
+    //
+    //                xhr = $.ajax('/symbol/popup').done(
+    //                          function(data) {
+    //                            xhr = null;
+    //                            elem.popover({
+    //                                trigger: 'auto',
+    //                                html: true,
+    //                                animation: false,
+    //                                container: elem,
+    //                                content: data
+    //                            }).popover('show');
+    //                            flask_moment_render_all();
+    //                          }
+    //                       );
+    //
+    //            },
+    //            function(event) {
+    //                    // mouse out event handler
+    //                    // mouse out event handler
+    //                 var elem = $(event.currentTarget);
+    //                 // if (timer) {
+    //                 //     clearTimeout(timer);
+    //                 //     timer = null;
+    //                 // }
+    //                 // else
+    //                 if (xhr) {
+    //                     xhr.abort();
+    //                     xhr = null;
+    //                 }
+    //                 else {
+    //                     // destroy popup here
+    //                 }
+    //                console.log("Mouse out");
+    //            }
+    //        )
+    //    });
+
+
+
   </script>
 
   {% if icon %}
@@ -63,7 +113,8 @@
   <!-- Nav Bar -->
   <section id="title">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a href="{{ url_for('main_app.index') }}" class="navbar-brand">Risk</a>
+      <!-- <span class="popup"></span> -->
+        <a href="{{ url_for('main_app.index') }}" class="navbar-brand">Risk</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler01" aria-controls="navbarToggler01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -204,8 +255,10 @@
                     <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Symbol_Float') }}">MT4 Symbol Floating 🎶 </a></li>
                     <div class="dropdown-divider"></div>
                     <!-- <li><a class="dropdown-item" href="{{ url_for('Spread.symbolSpread') }}">Symbol Spread [Daily] 🤪 </a></li> -->
-                    <li><a class="dropdown-item" href="{{ url_for('Spread.symbolSpread_custom', type='hourly') }}">Symbol Spread [Hourly] 🤪 </a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('Spread.symbolSpread_custom', type='daily') }}">Symbol Spread [Daily] 🤪 </a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('Spread.symbolSpread_custom', aggregate='AVG', type='hourly') }}">Symbol Spread AVG [Hourly] 🤪 </a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('Spread.symbolSpread_custom', aggregate='AVG', type='daily') }}">Symbol Spread AVG [Daily] 🤪 </a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('Spread.symbolSpread_custom', aggregate='MAX', type='hourly') }}">Symbol Spread MAX [Hourly] 🤪 </a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('Spread.symbolSpread_custom', aggregate='MAX', type='daily') }}">Symbol Spread MAX [Daily] 🤪 </a></li>
 
 
 
