Archiving old URLs

--- a/Risk_Aaron/app/templates/Swap_Calculate_results.html
+++ b/Risk_Aaron/app/templates/Swap_Calculate_results.html
@@ -94,7 +94,7 @@
                           {% endfor %}
                       </table>
                   </div>
-                  <p><input type="submit" name="edit" value="Send"></p>
+                  <input class="btn btn-primary btn-block" type="submit" name="edit" value="Send">
               </form>
           </div>
 
