--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -222,20 +222,12 @@
 
                     <div class="dropdown-divider"></div>
 
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.CFH_Soap_Position') }}">CFH Soap Position</a></li>
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.CFH_Soap_Symbol') }}">CFH Soap Symbol</a></li>
-                    <div class="dropdown-divider"></div>
 
-                    <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.USOil_Ticks') }}">USOil Alert 🛢</a></li>
+
+
                     <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Change_User_Group_V1%20.1/">Change User Group</a></li>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Daily_Change_Spread_V2.0/">Daily Change Spread ⭐</a></li>
-                    <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Daily_Change_Spread_V2.0/">Daily Change Spread [External]</a></li>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Change_Spread_manual/">HK Spread Change [External]</a></li>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/NFP_Change_Spread_V1.4/">NFP Spread Change [External] </a></li>
-                    <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/NFP_Change_Spread_V1.4/">NFP Spread Change</a></li>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/ABook_Match_Trades%20-%20V2.7/?Send_Email_Toggle=0">LP/MT4 Position</a></li>
+
+
 
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Monitor_Account_Trades_Settings') }}">Monitor Account Settings ➕</a></li>
@@ -248,9 +240,29 @@
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item" href="{{ url_for('mt5_monitoring.AIF_AB_Hedge') }}">UK Hedge A/B ⭐</a></li>
 
+                    <li class="nav-item dropleft">
+                      <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown12" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Archive
+                      </a>
+                      <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown12">
+                        <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.CFH_Soap_Position') }}">CFH Soap Position</a></li>
+                        <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.CFH_Soap_Symbol') }}">CFH Soap Symbol</a></li>
+                        <div class="dropdown-divider"></div>
+                        <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.USOil_Ticks') }}">USOil Alert 🛢</a></li>
+                        <div class="dropdown-divider"></div>
+                        <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Daily_Change_Spread_V2.0/">Daily Change Spread [External]</a></li>
+                        <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Change_Spread_manual/">HK Spread Change [External]</a></li>
+                        <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/NFP_Change_Spread_V1.4/">NFP Spread Change [External] </a></li>
+
+                        <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Daily_Change_Spread_V2.0/">Daily Change Spread ⭐</a></li>
+
+                        <div class="dropdown-divider"></div>
+                        <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/NFP_Change_Spread_V1.4/">NFP Spread Change</a></li>
+                        <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.20.61/all/ABook_Match_Trades%20-%20V2.7/?Send_Email_Toggle=0">LP/MT4 Position</a></li>
 
 
-
+                      </ul>
+                    </li>
 
                   </ul>
                 </li>
